force-app/main/default/objects/Case_Role__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Populated by Process Builder. Used by search.</description>
    <label>Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>