force-app/main/default/objects/Case_Role__c/fields/Behavior__c.field-meta.xml
<CustomField>
    <fullName>Behavior__c</fullName>
    <formula>IF( ISPICKVAL(Entity__r.Behavior_Level__c, &quot;High&quot;),  IMAGE(&quot;/servlet/servlet.FileDownload?file=015t00000006VM6&quot;, &quot;Emo-High&quot; , 15,15 ),

IF( ISPICKVAL(Entity__r.Behavior_Level__c, &quot;Medium&quot;),  IMAGE(&quot;/servlet/servlet.FileDownload?file=015t00000006VMB&quot;, &quot;Emo-Medium&quot; , 15,15 ),

IF( ISPICKVAL(Entity__r.Behavior_Level__c, &quot;Low&quot;),  IMAGE(&quot;/servlet/servlet.FileDownload?file=015t00000006VML&quot;, &quot;Emo-Low&quot; , 15,15 ),
&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behavior</label>
    <type>Text</type>
</CustomField>