force-app/main/default/objects/Case_Role__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>This field maintains the relationship between the Case Role and the Case.  Reparentable.</description>
    <inlineHelpText>This field maintains the relationship between the Case Role and the Case.  Reparentable.</inlineHelpText>
    <label>Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Case Role</relationshipLabel>
    <relationshipName>Case_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>