force-app/main/default/objects/Case_Role__c/fields/Case_Deputy_Phone__c.field-meta.xml
<CustomField>
    <fullName>Case_Deputy_Phone__c</fullName>
    <description>Shows the Assigned Deputy Phone from the Case. Used for search and Conga.</description>
    <formula>Case__r.Assigned_Deputy_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Deputy Phone</label>
    <type>Text</type>
</CustomField>