force-app/main/default/objects/Case_Role__c/fields/Case_Employer__c.field-meta.xml
<CustomField>
    <fullName>Case_Employer__c</fullName>
    <description>Formula field to migrate the Employer from the Case to the Case Role object for use in an email template (auto response to Claim Form being submitted).</description>
    <formula>( Case__r.Employer__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Employer</label>
    <type>Text</type>
</CustomField>