force-app/main/default/objects/Case_Role__c/fields/Case_Role_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Role_Account_Name__c</fullName>
    <description>Formula field to migrate the Case Role Account Name from the Case Role object for use in an email template (auto response to Claim Form being submitted).  Allows for Business Account name or Person Account name to display normally in the email template.</description>
    <formula>IF( ISBLANK(Entity__r.Name), Entity__r.PersonContact.FirstName + &quot; &quot; + IF( ISBLANK(Entity__r.PersonContact.MiddleName), Entity__r.PersonContact.LastName, Entity__r.PersonContact.MiddleName &amp; &quot; &quot; &amp; Entity__r.PersonContact.LastName) , Entity__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Role - Account Name</label>
    <type>Text</type>
</CustomField>