force-app/main/default/objects/Case_Role__c/fields/Case_Role_Entity_Full_Output__c.field-meta.xml
<CustomField>
    <fullName>Case_Role_Entity_Full_Output__c</fullName>
    <description>Formula field used to dynamically concatenate the Name, Entity Type Descriptor, and DBA of the Account associated with a Case Role.</description>
    <formula>IF ( NOT (ISBLANK(Entity__r.PersonContact.Law_Firm__c)), Entity__r.PersonContact.Law_Firm__r.Name + &quot;, Attn:&quot; + Entity__r.Name_UsedInTemplates__c, Entity__r.Name_UsedInTemplates__c 	+ IF(ISBLANK (Entity__r.Entity_Type_Other__c), 	&quot;, &quot; + TEXT( Entity__r.Legal_Entity_Descriptor__c ),&quot;, &quot; + Entity__r.Entity_Type_Other__c) + IF (ISBLANK ( Location__r.DBA__c ), &quot;&quot;, &quot; dba &quot; + Location__r.DBA__c ) + IF (ISBLANK(Entity__r.PersonContact.AKA_Alias_or_other_special_circumstance__c), &quot;&quot;, &quot;, a.k.a. &quot; + Entity__r.PersonContact.AKA_Alias_or_other_special_circumstance__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Role Entity Full Output</label>
    <type>Text</type>
</CustomField>