force-app/main/default/objects/Case_Role__c/fields/Conductor_Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Conductor_Troubleshooting__c</fullName>
    <description>Used by Conga support to troubleshoot Conductor.</description>
    <formula>HYPERLINK(&quot;https://conductor.congamerge.com/composer8/index.html?SessionId=&quot;
+ $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + Subpoena_URL__c,&quot;Test&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conductor Troubleshooting</label>
    <type>Text</type>
</CustomField>