force-app/main/default/objects/Case_Role__c/fields/Conga__c.field-meta.xml
<CustomField>
    <fullName>Conga__c</fullName>
    <description>##Conga created btn:00bZ0000000IaQa

Created by Conga Support</description>
    <formula>&quot;&amp;id=&quot; +   Id  +
&quot;&amp;reportid=[Employee]00OZ0000000LB0d?pv2=&quot; +  Case__r.Id  + &quot;,[Employors]00OZ0000000LB0Y?pv2=&quot; + Case__r.Id  + &quot;,[All]00OZ0000000LBVg?pv2=&quot; + Case__r.Id  +
&quot;&amp;templateid=a0nd0000005OSth&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
    <label>Conga</label>
    <type>Text</type>
</CustomField>