force-app/main/default/objects/Case_Role__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>The Entity being described in this Case Role. Links to the Account Object. - Not Reparentable</description>
    <inlineHelpText>The Entity being described in this Case Role. Links to the Account Object. - Not Reparentable</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Roles</relationshipLabel>
    <relationshipName>Case_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>