force-app/main/default/objects/Case_Role__c/fields/Entity_Phone__c.field-meta.xml
<CustomField>
    <fullName>Entity_Phone__c</fullName>
    <description>Business Account&#39;s phone, or Person Account&#39;s mobile phone number.</description>
    <formula>IF(Entity__r.IsPersonAccount,
     IF(ISBLANK(Entity__r.PersonContact.MobilePhone),
           Entity__r.PersonContact.HomePhone ,
           Entity__r.PersonContact.MobilePhone),
     Entity__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Business Account&#39;s phone, or Person Account&#39;s mobile phone number.</inlineHelpText>
    <label>Entity Phone</label>
    <type>Text</type>
</CustomField>