force-app/main/default/objects/Case_Role__c/fields/Judgment_URL__c.field-meta.xml
<CustomField>
    <fullName>Judgment_URL__c</fullName>
    <description>No longer used. Moved to Account.
Used by WCA 114 Button and Conga Conductor.</description>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;queryid=[Judgment]a0md00000064cjZAAQ?pv0=&quot; +  Entity__r.Id  + &quot;~pv1=&quot; +  Case__r.Id 
+ &quot;,[JudgmentLineItems]a0md00000064cjaAAA?pv0=&quot; + Entity__r.Id  + &quot;~pv1=&quot; +  Case__r.Id 
+ &quot;&amp;reportid=[Employee]00Od0000004pzun?pv2=&quot; + Case__c 
+ &quot;,[Employors]00Od0000004pzuo?pv2=&quot; + Case__c 
+ &quot;,[All]00Od0000004pzup?pv2=&quot; + Case__c 
+ &quot;&amp;qmode=Download&quot; 
+ &quot;&amp;SC0=1&quot;
+ &quot;&amp;SC1=Attachments&quot;
+ &quot;&amp;AttachmentParentID=&quot; + Id 
+ &quot;&amp;DefaultPDF=0&quot; 
+ &quot;&amp;templateId=a0nd0000005OSvF&quot; 
+ &quot;&amp;OFN=WCA 42 Subpoena Personal-&quot; + Case__r.Name + &quot;-&quot; + Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judgment URL</label>
    <type>Text</type>
</CustomField>