force-app/main/default/objects/Case_Role__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides ability to tie the location to a case role</description>
    <inlineHelpText>Select the location for the related account</inlineHelpText>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Entity__c</field>
            <operation>equals</operation>
            <valueField>Address__c.Entity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Case Roles</relationshipLabel>
    <relationshipName>Case_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>