force-app/main/default/objects/Case_Role__c/fields/Location_DBA__c.field-meta.xml
<CustomField>
    <fullName>Location_DBA__c</fullName>
    <description>This field us used for the Conga document.
The Location information from the &quot;DBA&quot; that is attached to a Case Role is copied into this formula fields so that it can be pulled into the Conga document.</description>
    <formula>Location__r.DBA__c</formula>
    <label>Location_DBA</label>
    <type>Text</type>
</CustomField>