force-app/main/default/objects/Case_Role__c/fields/Location_Street2__c.field-meta.xml
<CustomField>
    <fullName>Location_Street2__c</fullName>
    <description>This field us used for the Conga document. 
The Location information from the Address (line2) that is attached to a Case Role is copied into this formula fields so that it can be pulled into the Conga document.</description>
    <formula>Location__r.Address_2__c</formula>
    <label>Location_Street2</label>
    <type>Text</type>
</CustomField>