force-app/main/default/objects/Case_Role__c/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>Text field to write the case roles preferred language.</description>
    <label>Preferred Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>