force-app/main/default/objects/Case_Role__c/fields/Proof_of_WCI_Returned__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_WCI_Returned__c</fullName>
    <description>Allows users to record the response to a 601 form regarding the proof of an entity&#39;s Worker&#39;s Compensation Insurance and whether it is acceptable or a referral to BOFE is necessary.</description>
    <label>Proof of WCI Returned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Returned</fullName>
                <default>true</default>
                <label>Not Returned</label>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Returned, Refer Anyway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>