force-app/main/default/objects/Case_Role__c/fields/Reason_No_Longer_Active__c.field-meta.xml
<CustomField>
    <fullName>Reason_No_Longer_Active__c</fullName>
    <description>Used when Status = No Longer Active on Case.
Validation rule = Reason_No_Longer_Active</description>
    <label>Reason No Longer Active</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>