force-app/main/default/objects/Case_Role__c/fields/Relationship_Full_Output__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Full_Output__c</fullName>
    <description>Field to concatenate the Account Name + Entity Descriptor + DBA of the Case Role Account with the Relationship Description and the Account Name + Entity Descriptor + DBA of the Also Related To Account.</description>
    <formula>Case_Role_Entity_Full_Output__c + IF (ISBLANK (Relationship_to_Claimant__c), &quot;&quot; ,  Relationship_to_Claimant__c) + &quot; &quot; + IF( ISBLANK (Also_Related_To__r.Entity_Type_Other__c), IF( ISBLANK (Also_Related_To__r.Name), Also_Related_To__r.PersonContact.FirstName + &quot; &quot; + IF( ISBLANK(Also_Related_To__r.MiddleName), &quot;&quot; , Also_Related_To__r.MiddleName + &quot; &quot;) + Also_Related_To__r.PersonContact.LastName , Also_Related_To__r.Name ) + IF( ISBLANK( Also_Related_To__c ) , &quot;&quot; , &quot;, &quot; ) + TEXT( Also_Related_To__r.Legal_Entity_Descriptor__c )  + &quot; &quot; + Also_Related_To__r.DBA_Concatenation__c , IF( ISBLANK (Also_Related_To__r.Name), Also_Related_To__r.PersonContact.FirstName + &quot; &quot; + IF( ISBLANK(Also_Related_To__r.MiddleName), &quot;&quot; , Also_Related_To__r.MiddleName + &quot; &quot;) + Also_Related_To__r.PersonContact.LastName , Also_Related_To__r.Name ) + IF( ISBLANK( Also_Related_To__c ) , &quot;&quot; , &quot;, &quot; ) + Also_Related_To__r.Entity_Type_Other__c + &quot; &quot; + Also_Related_To__r.DBA_Concatenation__c )</formula>
    <label>Relationship Full Output</label>
    <type>Text</type>
</CustomField>