force-app/main/default/objects/Case_Role__c/fields/Relationship_to_Claimant__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Claimant__c</fullName>
    <description>Text field to document the relationship to the claimant</description>
    <inlineHelpText>Text entered here will be displayed on forms preceding the Related Account selected below. Ex: Attorney for ABC, Inc.</inlineHelpText>
    <label>Relationship Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>